# miniature-octo-lamp

./: .env.example  .gitignore  README.md  pyproject.toml
src/animereco/: anilist.py  config.py  db.py  log.py  main.py  models.py  utils.py
src/animereco/alembic/: env.py
src/animereco/alembic/versions/: 215a01eb0922_delete_title_add_anime_id.py  3406434b6ded_init.py  36980a959640_add_cover_column.py  7b08fb588aa1_add_title_columns.py  98db99834a03_mistral_entries.py  def88828c81c_to_jsonb.py
src/animereco/api/: crud.py  routes.py  schemas.py
src/animereco/front/static/: script.js  style.css
src/animereco/front/templates/: index.html
